[gd_scene load_steps=23 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Roboto-BoldItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://screens/Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://assets/sounds/musics/TremLoadingloopl.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/sfx/322228__doty21__sci-fi-button-click.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/Theme/UI_Theme.tres" type="Theme" id=7]
[ext_resource path="res://screens/Story/Story.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
content_margin_bottom = 20.0
bg_color = Color( 0.220267, 0.2112, 0.32, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.741176, 1, 0.360784, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 36.0
expand_margin_bottom = 8.0

[sub_resource type="DynamicFont" id=17]
size = 24
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=14]
default_font = SubResource( 17 )
Button/colors/font_color = Color( 0.741176, 1, 0.360784, 1 )
Button/fonts/font = SubResource( 16 )
WindowDialog/colors/title_color = Color( 0.741176, 1, 0.360784, 1 )
WindowDialog/constants/title_height = 18
WindowDialog/fonts/title_font = SubResource( 12 )
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 13 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 1 )

[node name="Start" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
smoothing_enabled = true

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecordLabel" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -358.312
margin_top = -100.0
margin_right = 358.313
margin_bottom = -16.389
grow_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = SubResource( 6 )
text = "Max Distance: 000000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameTitle" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -243.5
margin_top = -200.0
margin_right = 243.5
margin_bottom = -105.0
custom_fonts/font = SubResource( 1 )
text = "Infinite Space"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = 60.0
margin_right = 75.0
margin_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOptions" type="Button" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 140.0
margin_right = 105.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 2 )
text = "Options"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="author" type="Label" parent="Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -40.0
margin_right = 176.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0.854902, 0.854902, 0.854902, 1 )
custom_fonts/font = SubResource( 3 )
text = "game made by Mauro Victor @2022"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_right = 1280.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="OptionsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonControls" type="Button" parent="OptionsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -20.0
margin_right = 120.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 7 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCredits" type="Button" parent="OptionsScreen"]
margin_left = 535.0
margin_top = 420.0
margin_right = 745.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 8 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="OptionsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 140.0
margin_right = 60.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="RestartRecord" type="Button" parent="OptionsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -100.0
margin_right = 165.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 15 )
text = "Restart record"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmRestartRecord" type="ConfirmationDialog" parent="OptionsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1120.0
margin_top = -130.0
margin_right = 1440.0
margin_bottom = 190.64
theme = SubResource( 14 )
popup_exclusive = true
window_title = "Restard record"
resizable = true
dialog_text = "You want to restart record? 
This option is irreversible!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2560.0
margin_right = 2560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ControlsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )

[node name="BackToOptions" type="Button" parent="ControlsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 140.0
margin_right = 60.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="CreditsScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1280.0
margin_top = 720.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CreditsScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )

[node name="BackToOptions" type="Button" parent="CreditsScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = 140.0
margin_right = 60.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 10 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 2560.0
margin_top = 720.0
margin_right = 3840.0
margin_bottom = 1440.0
color = Color( 0.180392, 0.172549, 0.262745, 1 )

[node name="Story" parent="." instance=ExtResource( 8 )]
margin_top = 720.0
margin_bottom = 720.0

[connection signal="pressed" from="Menu/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="Menu/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="OptionsScreen/ButtonControls" to="." method="_on_ButtonControls_pressed"]
[connection signal="pressed" from="OptionsScreen/ButtonCredits" to="." method="_on_ButtonCredits_pressed"]
[connection signal="pressed" from="OptionsScreen/ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="OptionsScreen/RestartRecord" to="." method="_on_RestartRecord_pressed"]
[connection signal="confirmed" from="OptionsScreen/ConfirmRestartRecord" to="." method="_on_ConfirmRestartRecord_confirmed"]
[connection signal="pressed" from="ControlsScreen/BackToOptions" to="." method="_on_BackToOptions_pressed"]
[connection signal="pressed" from="CreditsScreen/BackToOptions" to="." method="_on_BackToOptions_pressed"]
